# HealthMonitor

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
device/: WIRING.md  healthmon_device.ino
migrations/: 0001_create_emails.down.sql  0001_create_emails.up.sql
src/: auth.rs  config.rs  main.rs
src/api/: email_routes.rs  healthcheck_routes.rs  mod.rs
src/email/: db.rs  imap_client.rs  mod.rs  runner.rs
src/healthcheck/: file_check.rs  http_check.rs  mod.rs  runner.rs
