[package]
name = "healthmon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "healthmon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "migrate"] }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
async-imap = { version = "0.9", default-features = false, features = ["runtime-async-std"] }
async-native-tls = "0.5"
tokio-native-tls = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
thiserror = "1"
anyhow = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
futures = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
